[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "storage_bench"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
sled = "0.34.7"
criterion = "0.5.1"
rand = "0.8.5"
